# VulkanNotes

01_HelloTriangle/: CMakeLists.txt  README.md
01_HelloTriangle/docs/: 07_swapchain.md  10_framebuffers_and_commands.md  11_drawing_and_sync.md  12_glossary.md
01_HelloTriangle/shaders/: triangle.frag  triangle.vert
01_HelloTriangle/src/: main.cpp  vk_backend_impl.cpp
docs/: 00_overview.md  01_setup_and_build.md  02_instance_and_volk.md  03_validation_layers.md  04_surface_and_window.md  05_devices_and_queues.md  06_vma_and_buffers.md  08_render_pass.md  09_shaders_and_pipeline.md
